Add docs for front end, complete front end and fix SecurityConfig